welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
def faireV() {
^PictureMono2:1: error: expected class or object definition
def faireV() {
^